circular color flow

--- a/dev/52.ini
+++ b/dev/52.ini
@@ -8,9 +8,9 @@ type = linear
 
   [end_color]
 
-b = 20
-g = 20
-r = 110
+blue = 20
+gree = 20
+red = 110
 
   [line]
 
@@ -20,15 +20,14 @@ thickness = 1
 
   [start_color]
 
-b = 110
-g = 20
-r = 20
+blue = 110
+green = 20
+red = 20
 
   [x]
 
 damp = 0
-dir = 0
-freq = 6
+frequency = 6
 offset = 0
 on = 1
 radius = 1
@@ -36,8 +35,7 @@ radius = 1
   [y]
 
 damp = 0
-dir = 0
-freq = 5.02
+frequency = 5.02
 offset = 0
 on = 1
 radius = 1
@@ -45,8 +43,7 @@ radius = 1
   [z]
 
 damp = 0
-dir = 0
-freq = 4
+frequency = 4
 offset = 0
 on = 1
 radius = 1
