--- a/dev/drehkopf.ini
+++ b/dev/drehkopf.ini
@@ -3,47 +3,47 @@
 
 dynamic = 2
 period = 10
-stepsize = 4
-type = linear
+stepsize = 1
+type = circular
 
   [end_color]
 
 blue = 20
-green = 20
-red = 110
+green = 132
+red = 129
 
   [line]
 
 density = 100
-length = 47
+length = 51
 thickness = 1
 
   [start_color]
 
-blue = 110
+blue = 140
 green = 20
 red = 20
 
   [x]
 
 damp = 0
-frequency = 6
+frequency = 3
 offset = 0
 on = 1
-radius = 1
+radius = 0.96
 
   [y]
 
 damp = 0
-frequency = 5.02
-offset = 0
+frequency = 3.142
+offset = 0.035
 on = 1
-radius = 1
+radius = 0.96
 
   [z]
 
 damp = 0
-frequency = 4
-offset = 0
+frequency = 1.001
+offset = 0.08
 on = 1
 radius = 1
