--- a/dev/ei.ini
+++ b/dev/ei.ini
@@ -1,10 +1,10 @@
 
   [color_flow]
 
-dynamic = 2
+dynamic = 1
 period = 10
-stepsize = 4
-type = linear
+stepsize = 1
+type = no
 
   [end_color]
 
@@ -14,8 +14,8 @@ red = 110
 
   [line]
 
-density = 100
-length = 47
+density = 132
+length = 33
 thickness = 1
 
   [start_color]
@@ -26,24 +26,24 @@ red = 20
 
   [x]
 
-damp = 0
-frequency = 6
-offset = 0
+damp = 1
+frequency = 3.007
+offset = 0.75
 on = 1
 radius = 1
 
   [y]
 
-damp = 0
-frequency = 5.02
-offset = 0
+damp = 1
+frequency = 2.007
+offset = 0.5
 on = 1
 radius = 1
 
   [z]
 
 damp = 0
-frequency = 4
+frequency = 1
 offset = 0
 on = 1
 radius = 1
