preparing CPAN releas

--- a/default.cfg
+++ b/default.cfg
@@ -1,7 +1,9 @@
-./img/suche
 
-open 
-save
-write
-
-last
+file_base = ./img/suche
+open_dir =  
+save_dir =
+write_dir = 
+last_settings:
+  - ./img/wirbel.ini
+color:
+  - bright_blue = [ 98, 156, 249 ]
