--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,4 @@
-name    = App-Harmonograph
+name    = App-GUI-Harmonograph
 ;main_module = 
 ;abstract = 
 ;version = 
@@ -17,6 +17,7 @@ Wx = 0.9
 
 [Prereqs / TestRequires]
 Test::More =  1.3
+Test::Warn =  0.30
 
 [MetaNoIndex]
 directory = t
