collect rest of lies

--- a/dist.ini
+++ b/dist.ini
@@ -28,6 +28,7 @@ directory = lib
 
 [Git::GatherDir]
 exclude_filename = Readme.md
+exclude_filename = .harmonograph
 exclude_match = ^examples
 exclude_match = ^img
 exclude_match = ^dev
@@ -57,4 +58,4 @@ exclude_match = ^dev
 ; ignore = bin/myscript1   ; what input file to ignore
 
 ; [=inc::Documentation]
-; module = Chart::Manual
+; module = App::GUI::Harmonograph
