try fix CPAN release

--- a/dist.ini
+++ b/dist.ini
@@ -21,7 +21,6 @@ Test::Warn =  0.30
 
 [MetaNoIndex]
 directory = t
-directory = lib
 
 ; pollutes meta section 'provides'
 [MetaProvides::Package]
@@ -36,6 +35,8 @@ exclude_match = ^dev
 ; use RewriteVersion or VersionFromModule 
 ;[VersionFromModule] 
 [RewriteVersion]
+allow_decimal_underscore = 1
+
 [Repository]
 [AbstractFromPOD]
 [Pod2Readme]
