--- a/dist.ini
+++ b/dist.ini
@@ -22,6 +22,9 @@ Test::Warn =  0.30
 [MetaNoIndex]
 directory = t
 
+[ExecDir]
+dir = bin
+
 ; pollutes meta section 'provides'
 [MetaProvides::Package]
 
