--- a/dist.ini
+++ b/dist.ini
@@ -37,8 +37,7 @@ exclude_match = ^img
 exclude_match = ^dev
 
 ; use RewriteVersion or VersionFromModule 
-;[VersionFromModule] 
-[RewriteVersion]
+[VersionFromModule] 
 allow_decimal_underscore = 1
 
 [Repository]
