updated and fixed config parser

--- a/dist.ini
+++ b/dist.ini
@@ -1,11 +1,11 @@
 name    = App-GUI-Harmonograph
-;main_module = 
-;abstract = 
-;version = 
+;main_module =
+;abstract =
+;version =
 author  = Herbert Breunung <lichtkind@cpan.org>
 license = GPL_3
 copyright_holder = Herbert Breunung <lichtkind@cpan.org>
-copyright_year   = 2022
+copyright_year   = 2022-23
 
 [Prereqs]
 perl = v5.12.0
@@ -22,6 +22,7 @@ Test::Warn =  0.30
 
 [MetaNoIndex]
 directory = t
+namespace = App::GUI::Harmonograph
 
 [ExecDir]
 dir = bin
@@ -36,11 +37,12 @@ exclude_match = ^examples
 exclude_match = ^img
 exclude_match = ^dev
 
-; use RewriteVersion or VersionFromModule 
-[VersionFromModule] 
+; use RewriteVersion or VersionFromModule
+[VersionFromModule]
 allow_decimal_underscore = 1
 
 [Repository]
+[PodSyntaxTests]
 [AbstractFromPOD]
 [Pod2Readme]
 [MetaJSON]
