move some widgets into own namespace

--- a/dist.ini
+++ b/dist.ini
@@ -23,6 +23,7 @@ Test::Warn =  0.30
 [MetaNoIndex]
 directory = t
 namespace = App::GUI::Harmonograph
+namespace = App::GUI::Wx
 
 [ExecDir]
 dir = bin
