clean and update code a litte

--- a/dist.ini
+++ b/dist.ini
@@ -39,6 +39,7 @@ exclude_match = ^dev
 
 ; use RewriteVersion or VersionFromModule
 [VersionFromModule]
+;[RewriteVersion]
 allow_decimal_underscore = 1
 
 [Repository]
